<resources>
    <string name="app_name">GitHub profile Client</string>
    <string name="username">Enter Github Username</string>
    <string name="load">LOAD</string>
    <string name="not_available">Not Available</string>
    <string name="email">Email</string>
    <string name="foo_bar">Foo Bar</string>
    <string name="company">Company</string>
    <string name="bio">Bio</string>
    <string name="number_of_repository">Number Of Repository</string>
    <string name="followers">Followers</string>
    <string name="repository">Repositories</string>
    <string name="location_not_available">Location Not Available</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="created_on">Created On</string>
    <string name="enter_github_username">Enter Github Username</string>
    <string name="welcome">Welcome!</string>
    <string name="orgname">Enter Organisation Username</string>
    <string name="blog">Blog</string>
    <string name="enter_organisation_name">Enter Organisation Name</string>
    <string name="individual_user_profile">Individual User Profile</string>
    <string name="company_profile">Company Profile</string>
    <string name="enter_username">Enter Username</string>
</resources>
