<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayOrgProfile">


    <RelativeLayout
        android:id="@+id/relativeLayoutOrg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/grad"
        android:paddingBottom="20dp">

        <RelativeLayout
            android:id="@+id/imageUserOrg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/circle_border">

            <ImageView
                android:id="@+id/imageProfileOrg"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="9dp"
                android:adjustViewBounds="true"
                android:background="@drawable/circle"
                android:padding="3dp"
                android:scaleType="centerInside"
                android:contentDescription="@string/profile_picture" />

        </RelativeLayout>

        <TextView
            android:id="@+id/orgName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageUserOrg"
            android:layout_centerHorizontal="true"
            android:textSize="32sp"
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="15dp"
            android:text="@string/foo_bar"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/locationOrg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/orgName"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:layout_marginTop="1dp"
            android:text="@string/location_not_available"
            android:textColor="@color/address"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/repoLayoutOrg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayoutOrg"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/followingBg"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <TextView
                    android:id="@+id/numberRepositoryOrg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="25sp"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/repository"
                    android:textSize="13sp"
                    android:textColor="@color/white"/>

            </LinearLayout>
        </RelativeLayout>


    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/repoLayoutOrg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/headings"
                    android:textSize="13sp"
                    android:text="@string/blog"/>

                <TextView
                    android:id="@+id/blogOrg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-light"
                    android:textSize="13sp"
                    android:text="@string/not_available"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/headings"
                    android:textSize="13sp"
                    android:text="@string/email"/>

                <TextView
                    android:id="@+id/emailIDOrg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-light"
                    android:textSize="13sp"
                    android:text="@string/not_available"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/headings"
                    android:textSize="13sp"
                    android:text="@string/created_on"/>

                <TextView
                    android:id="@+id/createdOnOrg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-light"
                    android:textSize="13sp"
                    android:text="@string/not_available"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey"/>


            </LinearLayout>



        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>